compoze Changelog
=================

After compoze 0.3.1 (unreleased)
--------------------------------

- Added ``--config-file`` option to permit setting options in an INI-style
  config file.

compoze 0.3.1 (2010-03-25)
--------------------------

- Fix bug in ``compoze fetch`` under recent setuptools:
  "AttributeError: NoneType has no attribute 'clone'".

- Fix bug in ``compoze show`` under recent setuptools:
  "AttributeError: EmptyProvider instance has no attribute 'name'".

- Further documentation improvements.


compoze 0.3 (2010-03-25)
------------------------

- Added Sphinx documentation.

- Switched to using ``pkginfo`` to parse package information.

- Added ``pool`` command which moves all archives in the current directory
  to a common pool directory and symlinks them back.

- Added ``show`` command, which displays locations for one or more
  requirements across a set of indexes.


compoze 0.2 (2007-11-19)
------------------------

- Added ``--help-commands`` option to show subcommands.

- Broke ``fetch`` and ``index`` out as subcommands;  other commands can
  be registered using the pkg_resources entry point group,
  ``compoze_commands``.


compoze 0.1 (2007-11-14)
------------------------

- Initial release.